--- a/delete_dupes.ipynb
+++ b/delete_dupes.ipynb
@@ -37,14 +37,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
+    "data = pd.read_csv(\"data/dupes_data.csv\")\n",
+    "\n",
     "def delete_duplicate_emails(person):\n",
-    "    return ..."
+    "    \"\"\"\n",
+    "    Takes in a DataFrame with an email column, locates, and subsequently deletes\n",
+    "    duplicate emails. Returns the updated DataFrame\n",
+    "    Args:\n",
+    "        person (DataFrame): DataFrame with an email column\n",
+    "\n",
+    "    Returns:\n",
+    "        DataFrame: DataFrame with duplicate emails dropped\n",
+    "    \"\"\"\n",
+    "    # Set parameter to display duplicated rows in the email column - More for us to see if there actually are duplicates\n",
+    "    # duplicates = person[person.duplicated('email')]\n",
+    "    # Drops duplicate email with inplace set to True to modify actual DataFrame\n",
+    "    person.drop_duplicates('email', inplace=True)\n",
+    "    return person"
    ]
   },
   {
@@ -60,9 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output\n",
+      ":    id             email\n",
+      "0   1  john@example.com\n",
+      "1   2   bob@example.com\n",
+      "Test case 1: True\n"
+     ]
+    }
+   ],
    "source": [
     "from tests import test_dupes\n",
     "\n",
@@ -92,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
