--- a/max_profits.ipynb
+++ b/max_profits.ipynb
@@ -33,14 +33,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def max_profit(prices):\n",
-    "    ...\n",
+    "# We can try to use the min and max values to locate in the list.\n",
+    "# We need to create a condition that checks if the min is before the max\n",
+    "# This means eliminating the choices preceding the min\n",
+    "import numpy as np\n",
+    "      \n",
     "\n",
-    "    return ..."
+    "def max_profit(prices):\n",
+    "    \"\"\"\n",
+    "    This function compares the elements within the list to each other and returns\n",
+    "    the difference between the local max and the local minimum value preceeding it.\n",
+    "\n",
+    "    Args:\n",
+    "        prices (list): List of ints where index counts as days & int values count as stock prices\n",
+    "\n",
+    "    Returns:\n",
+    "        Int: Returns the maximum profit calculated through the \n",
+    "        difference between the local price and current minimum price\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # In case a list input is less than two values\n",
+    "    if len(prices) < 2:\n",
+    "        return 0  # Not enough prices to calculate profit\n",
+    "\n",
+    "    # Set initial minimum to the first index and the max_profit to 0\n",
+    "    min_price = prices[0]\n",
+    "    max_profit = 0\n",
+    "    # Iterate through the list of prices\n",
+    "    for price in prices[1:]:\n",
+    "        # Set the profit equal to the current price minus the minimum price (prices[0])\n",
+    "        profit = price - min_price\n",
+    "        # Update & set max_profit to local profit if local profit is greater than current max_profit\n",
+    "        if profit > max_profit:\n",
+    "            max_profit = profit\n",
+    "        # Update & set min_price equal to local price if local price is less than min_price\n",
+    "        if price < min_price:\n",
+    "            min_price = price\n",
+    "\n",
+    "    return max_profit            "
    ]
   },
   {
@@ -56,9 +90,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output 1 \n",
+      ": 7\n",
+      "Test case 1: True\n",
+      "Output 2 \n",
+      ": 0\n",
+      "Test case 2: True\n",
+      "Output 3\n",
+      ": 6\n",
+      "Test case 3: True\n"
+     ]
+    }
+   ],
    "source": [
     "from tests import test_max_profit\n",
     "\n",
@@ -96,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
