--- a/modify_columns.ipynb
+++ b/modify_columns.ipynb
@@ -49,9 +49,20 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "\n",
     "def modifySalaryColumn(employees):\n",
-    "    return ..."
+    "    \"\"\"Takes a DataFrame and modifies the salary column by 100%\n",
+    "\n",
+    "    Args:\n",
+    "        employees (DataFrame): DataFrame with two columns: name, salary\n",
+    "\n",
+    "    Returns:\n",
+    "        DataFrame: DataFrame with values in salary doubled. \n",
+    "        Would be fun to put a second argument to change salary percentage\n",
+    "    \"\"\"\n",
+    "    # Doubles salary column in DataFrame\n",
+    "    employees['salary'] = employees['salary'] * 2\n",
+    "    # Returns DataFrame\n",
+    "    return employees"
    ]
   },
   {
@@ -67,9 +78,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output\n",
+      ":       name  salary\n",
+      "0     Jack   39332\n",
+      "1    Piper  149508\n",
+      "2      Mia  125018\n",
+      "3  Ulysses  109732\n",
+      "Test case 1: True\n"
+     ]
+    }
+   ],
    "source": [
     "from tests import test_modify\n",
     "\n",
@@ -99,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
