--- a/recyclable.ipynb
+++ b/recyclable.ipynb
@@ -41,15 +41,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "\n",
     "def find_products(products):\n",
-    "    return ..."
+    "    \"\"\"\n",
+    "    Method filters a DataFrame to contain rows where both low_fats & recyclable are set equal to 'Y'\n",
+    "\n",
+    "    Args:\n",
+    "        products (DataFrame): DataFrame containing priduct_id, low_fats, & recyclable columns\n",
+    "\n",
+    "    Returns:\n",
+    "        DataFrame: Filtered DataFrame where the products both have low fat and are recyclable\n",
+    "    \"\"\"\n",
+    "    # We use '&' instead of 'and' because the former runs comparison across the Series,comparing corresponding elements\n",
+    "    fr_product_id = products[(products['low_fats'] == 'Y') & (products['recyclable'] == 'Y')]\n",
+    "    # Alternative, slighly less efficient method\n",
+    "    # fr_product_id = products[np.logical_and(products['low_fats'] == 'Y', products['recyclable'] == 'Y')]   \n",
+    "    # Drops low_fats & recyclable columns\n",
+    "    cols = list(products.columns) # More Pythonic way to drop\n",
+    "    fr_product_id = fr_product_id.drop(columns=cols[1:], axis=1) # OR .drop(['low_fats', 'recyclable'], axis=1)\n",
+    "    \n",
+    "    return fr_product_id"
    ]
   },
   {
@@ -65,9 +82,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output\n",
+      ":    product_id\n",
+      "1           1\n",
+      "3           3\n",
+      "Test case 1: True\n"
+     ]
+    }
+   ],
    "source": [
     "from tests import test_recyclable\n",
     "\n",
@@ -97,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
