--- a/top_travelers.ipynb
+++ b/top_travelers.ipynb
@@ -66,16 +66,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
+    "# Here, it looks like we can concat and/or group DataFrames\n",
+    "# We ought to compare user_id from rides df with id from persons df\n",
+    "\n",
+    "users = pd.read_csv(\"data/users.csv\")\n",
+    "rides = pd.read_csv(\"data/rides.csv\")\n",
     "\n",
     "def top_travellers(users, rides):\n",
-    "    ...\n",
-    "    return ..."
+    "    \"\"\"\n",
+    "    Takes two DataFrames, groups by user_id and id, renames distance to travelled_distance, and sorts values from highest to \n",
+    "    lowest first, and if there are equivalent distances, values are sorted in alphebetical order.\n",
+    "\n",
+    "    Args:\n",
+    "        users (DataFrame): DataFrame with the id and name of each person\n",
+    "        rides (DataFrame): DataFrame with the user_id and distance travelled per ride\n",
+    "\n",
+    "    Returns:\n",
+    "        DataFrame: Sorted DataFrame that has successfully linked ids together and \n",
+    "        orders distance travelled from highest to lowest. If distance is equivalent, it is sorted in alphebetical order.\n",
+    "    \"\"\"\n",
+    "    # Summarize total distance travelled by each user & condense into one value with sum()\n",
+    "    grouped_rides = rides.groupby(\"user_id\").sum()\n",
+    "    # Merge users with aggregated rides data\n",
+    "    merged = pd.merge(users, grouped_rides, how=\"left\", left_on=\"id\", right_on=\"user_id\")[[\"name\", \"distance\"]]\n",
+    "    # Rename columns\n",
+    "    merged.columns = [\"name\", \"travelled_distance\"]\n",
+    "    # Fill NaN values with 0 for travelled_distance & convert to int vs float default\n",
+    "    merged['travelled_distance'] = merged['travelled_distance'].fillna(0).astype(int)\n",
+    "    # Sort the DataFrame: first by travelled_distance (descending) then by name (ascending)\n",
+    "    sorted_merged = merged.sort_values(by=['travelled_distance', 'name'], ascending=[False, True]).reset_index(drop=True)\n",
+    "        \n",
+    "    return sorted_merged"
    ]
   },
   {
@@ -91,13 +118,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Output\n",
+      ":        name  travelled_distance\n",
+      "0     Elvis                 450\n",
+      "1       Lee                 450\n",
+      "2       Bob                 317\n",
+      "3  Jonathan                 312\n",
+      "4      Alex                 222\n",
+      "5     Alice                 120\n",
+      "6    Donald                   0\n",
       "Test case 1: False\n"
      ]
     }
@@ -132,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
