--- a/valid_emails.ipynb
+++ b/valid_emails.ipynb
@@ -53,16 +53,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:16: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:16: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\dylan\\AppData\\Local\\Temp\\ipykernel_30752\\978638400.py:16: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  filtered_users = users[users['mail'].str.contains('^[a-zA-Z]+[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$')\n"
+     ]
+    }
+   ],
    "source": [
+    "import re\n",
     "import pandas as pd\n",
-    "\n",
+    "import string\n",
     "\n",
     "def valid_emails(users):\n",
+    "    \"\"\"\n",
+    "    Function which takes in DataFrame and filters out emails that are not in the correct format.\n",
+    "    Correct format is [Aa-Zz][Aa-Zz09._-]@leetcode.com\n",
+    "    \n",
+    "    Args:\n",
+    "        users (DataFrame): DataFrame with column 'email' containing user emails\n",
     "\n",
-    "    return ..."
+    "    Returns:\n",
+    "        DataFrame: DataFrame with filtered rows of data predicated on their syntax structure\n",
+    "    \"\"\"\n",
+    "    # Initialize lists\n",
+    "    list_of_letters = [l for l in string.ascii_letters] \n",
+    "    list_of_nums = [str(i) for i in range(0, 10)]\n",
+    "    list_of_chars = ['_', '.', '-', '@']\n",
+    "    combined_chars = list_of_chars + list_of_letters + list_of_nums\n",
+    "    \n",
+    "    # Filter emails based on criteria using regex\n",
+    "                           # Filtering emails based on regex matching for valid email format\n",
+    "    filtered_users = users[users['mail'].str.contains('^[a-zA-Z]+[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$') \n",
+    "                           & \n",
+    "                           # Filtering emails to only include those from leetcode.com domain\n",
+    "                           users['mail'].str.contains('@leetcode.com')]\n",
+    "\n",
+    "    return filtered_users"
    ]
   },
   {
@@ -78,9 +112,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output\n",
+      ":               name                     mail\n",
+      "user_id                                    \n",
+      "1          Winston     winston@leetcode.com\n",
+      "3        Annabelle      bella-@leetcode.com\n",
+      "4            Sally  sally.come@leetcode.com\n",
+      "Test case 1: True\n"
+     ]
+    }
+   ],
    "source": [
     "from tests import test_email\n",
     "from importlib import reload\n",
@@ -89,7 +137,7 @@
     "data = pd.read_csv(\"data/email_data.csv\", index_col=\"user_id\")\n",
     "\n",
     "output = valid_emails(data)\n",
-    "result1 = test_email.test1()\n",
+    "result1 = test_email.test1(output)\n",
     "\n",
     "print(\"Output\\n:\", output)\n",
     "print(\"Test case 1:\", result1)"
@@ -112,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
